# smvit

./: README.md  ucs.qea  use_case.docx  ~$e_case.docx
smvit-git/: .gitignore
smvit-git/3d-model/: meteo.blend  meteo1.blend  meteo1.blend1
smvit-git/dht11/dht11-reader/: reader.py
smvit-git/dht11/dht11-reader-cpp/: CMakeLists.txt  main.cpp
smvit-git/ha-deamon/: main.py
smvit-git/meteo-dashboard/: get_data.php  index.php  package-lock.json  package.json  pnpm-lock.yaml
smvit-git/meteo-dashboard/js/: home.js  home.ts
smvit-git/schematics/: schematics.kicad_pro  schematics.kicad_sch
smvit-git/sensor-reader/: CMakeLists.txt  main.cpp
